tests/fsharp/typecheck/sigs/neg32.bsl

neg32.fs(17,21,17,49): typecheck error FS0842: This attribute is not valid for use on this language element

neg32.fs(24,15,24,16): typecheck error FS0043: The member or object constructor 'TryParse' does not take 1 argument(s). An overload was found taking 2 arguments.

neg32.fs(39,17,39,19): typecheck error FS0039: The type parameter 'T' is not defined

neg32.fs(40,4,40,23): typecheck error FS0671: A property cannot have explicit type parameters. Consider using a method instead.

neg32.fs(40,21,40,23): typecheck error FS0039: The type parameter 'U' is not defined

neg32.fs(41,21,41,23): typecheck error FS0039: The type parameter 'U' is not defined

neg32.fs(41,27,41,29): typecheck error FS0039: The type parameter 'U' is not defined

neg32.fs(42,18,42,20): typecheck error FS0039: The type parameter 'U' is not defined

neg32.fs(42,24,42,26): typecheck error FS0039: The type parameter 'U' is not defined

neg32.fs(46,17,46,19): typecheck error FS0039: The type parameter 'T' is not defined

neg32.fs(47,4,47,23): typecheck error FS0671: A property cannot have explicit type parameters. Consider using a method instead.

neg32.fs(47,21,47,23): typecheck error FS0039: The type parameter 'U' is not defined

neg32.fs(48,21,48,23): typecheck error FS0039: The type parameter 'U' is not defined

neg32.fs(48,27,48,29): typecheck error FS0039: The type parameter 'U' is not defined

neg32.fs(49,18,49,20): typecheck error FS0039: The type parameter 'U' is not defined

neg32.fs(49,24,49,26): typecheck error FS0039: The type parameter 'U' is not defined

neg32.fs(52,10,52,12): typecheck error FS0039: The type parameter 'T' is not defined

neg32.fs(52,10,52,12): typecheck error FS0039: The type parameter 'T' is not defined

neg32.fs(55,11,55,13): typecheck error FS0039: The type parameter 'T' is not defined

neg32.fs(55,11,55,13): typecheck error FS0039: The type parameter 'T' is not defined

neg32.fs(59,65,59,86): typecheck error FS0033: The non-generic type 'System.EventArgs' does not expect any type arguments, but here is given 1 type argument(s)

neg32.fs(59,21,59,27): typecheck error FS1091: The event 'Event1' has a non-standard type. If this event is declared in another CLI language, you may need to access this event using the explicit add_Event1 and remove_Event1 methods for the event. If this event is declared in F#, make the type of the event an instantiation of either 'IDelegateEvent<_>' or 'IEvent<_,_>'.
